Prevented video overlap with scene

--- a/public/index.css
+++ b/public/index.css
@@ -109,3 +109,9 @@ videos ul li {
 buttons {
   display: inline-block;
 }
+
+canvas {
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
+}
